--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "iostream": "cpp",
         "vector": "cpp",
         "chrono": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "realsize"
+    ]
 }
