--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "chrono": "cpp"
     },
     "cSpell.words": [
-        "realsize"
+        "realsize",
+        "Toeplitz"
     ],
     "cSpell.ignoreWords": [
         "STROMAL"
